# Part3_Auto_Doc

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: autodoc.yml
autodoc-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
autodoc-backend/src/autodoc/: cache.py  cli.py  config.py  context.py  filters.py  git_utils.py  lang_extractors.py  llm.py  manifest.py  models.py  prompts.py  quality.py  repo_index.py  router.py  server.py  session.py
demo-website/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
demo-website/app/: globals.css  layout.tsx  page.tsx
demo-website/app/api/auth/login/: route.ts
demo-website/app/api/auth/logout/: route.ts
demo-website/app/api/demo/generate/: route.ts
demo-website/app/api/demo/generate-zip/: route.ts
demo-website/app/api/jobs/[id]/: route.ts
demo-website/app/api/jobs/[id]/stream/: route.ts
demo-website/app/login/: page.tsx
demo-website/components/ci-showcase/: AnimatedTerminal.tsx  CIPipelineShowcase.tsx  WorkflowYamlPanel.tsx
demo-website/components/docs/: DiffViewer.tsx  DocsViewer.tsx  MarkdownRenderer.tsx  QualityDashboard.tsx
demo-website/components/input/: GitUrlForm.tsx  InputPanel.tsx  ZipUploadForm.tsx
demo-website/components/jira-mock/: ConfluenceHierarchy.tsx  JiraIssueMock.tsx
demo-website/components/layout/: NavBar.tsx
demo-website/components/progress/: JobProgressBar.tsx  StreamingLogPane.tsx
demo-website/lib/: api.ts  diffUtils.ts  types.ts  useDemoStore.ts  useJobPoller.ts
demo-website/public/assets/: autodoc.yml
jira-confluence-app/autodoc-test/: .gitignore  README.md  manifest.yml  package-lock.json  package.json
jira-confluence-app/autodoc-test/src/: index.js
jira-confluence-app/autodoc-test/static/hello-world/: package-lock.json  package.json
jira-confluence-app/autodoc-test/static/hello-world/src/: App.js
